Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = http://www.cl.cam.ac.uk/~mgk25/jbigkit/
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
